--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
         <div class="footer">
           <span id="footer-links">
             <a href="" class="footer-link">Over ons</a> <span class="separator">&bull;</span>
-            <a href="https://www.twitter.com/2442Project" class="footer-link">Vind on op Twitter</a>
+            <a href="https://www.twitter.com/2442Project" class="footer-link">Vind ons op Twitter</a>
           </span>
         </div>
       </div>
