--- a/_includes/post.html
+++ b/_includes/post.html
@@ -18,7 +18,7 @@
   <div class="colophon">
     <p>
       <span id="pub-date">Published on {{ page.date | date_to_string }}</span> <span class="separator">&bull;</span>
-      <span id="social">Vind ons op <a href="https://www.twitter.com/2442Project">Twitter</a>!</span>
+      <span id="social">Vind ons op <a href="https://www.twitter.com/2442Project" target="_new">Twitter</a>!</span>
     </p>
   </div>
 </div>
