--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
       <div class="sidebar" id="sidebar">
         <div class="header">
           <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
-          <span class="tagline">Open Source Responsible Disclosure Project</span>
+          <span class="tagline">Cyber Security Project</span>
         </div>
         <div class="posts">
           <ul class="posts-list">
