--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-            <a href="https://2442.nl/posts/2017/07/01/over-ons.html" class="footer-link">Over ons</a> <span class="separator">&bull;</span>
+            <a href="https://2442.nl/overons.html" class="footer-link">Over ons</a> <span class="separator">&bull;</span>
             <a href="https://www.twitter.com/2442Project" target="_new" class="footer-link">Twitter</a>
           </span>
         </div>
