--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,13 @@
       <meta name="viewport" content="width=device-width">
 
       <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="/css/syntax.css">
+      <link rel="stylesheet" href="/css/syntax.css"    rel="stylesheet">
 
       <!-- Custom CSS -->
-      <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/css/main.css"    rel="stylesheet">
 
       <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/css/responsive.css">
+      <link rel="stylesheet" href="/css/responsive.css"    rel="stylesheet" media="orientation:max-width">
 
       <!-- Google Fonts -->
       <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
