--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       <link rel="stylesheet" href="/css/main.css"    rel="stylesheet">
 
       <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/css/responsive.css"    rel="stylesheet" media="orientation:max-width">
+      <link rel="stylesheet" href="/css/responsive.css"    rel="stylesheet" media="(max-width: 1309px)">
 
       <!-- Google Fonts -->
       <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
