--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,17 +7,16 @@
       <meta name="viewport" content="width=device-width">
 
       <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="/css/syntax.css"    rel="stylesheet">
+      <link rel="stylesheet" href="/css/syntax.css">
 
       <!-- Custom CSS -->
-      <link rel="stylesheet" href="/css/main.css"    rel="stylesheet">
+      <link rel="stylesheet" href="/css/main.css">
 
       <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/css/responsive.css"    rel="stylesheet" media="(max-width: 1309px)">
+      <link rel="stylesheet" href="/css/responsive.css" media="(max-width: 1309px)">
 
       <!-- Google Fonts -->
-      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700' rel='stylesheet' type='text/css'>
-      <link href='https://fonts.googleapis.com/css?family=Raleway:300,400,700' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700|Raleway:300,400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="site">
@@ -49,6 +48,6 @@
         {{ content }}
 
     </div>
-    <script src="/scripts/responsive.js" type="text/javascript"></script>
+    <script async src="/scripts/responsive.js" type="text/javascript"></script>
   </body>
 </html>
