--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
       <link rel="stylesheet" href="/css/syntax.css">
 
       <!-- Custom CSS -->
-      <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/css/main.css" media="orientation:landscape">
 
       <!-- Responsive CSS -->
-      <link rel="stylesheet" href="/css/responsive.css" media="(max-width: 1309px)">
+      <link rel="stylesheet" href="/css/responsive.css" media="orientation:portrait and(max-width: 1309px)">
 
       <!-- Google Fonts -->
       <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700|Raleway:300,400,700' rel='stylesheet' type='text/css'>
