--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,16 +5,12 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <title>24:42 Project - {{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
-
       <!-- syntax highlighting CSS -->
-      <link rel="stylesheet" href="/css/syntax.css">
-
+      <link async rel="stylesheet" href="/css/syntax.css">
       <!-- Custom CSS -->
       <link rel="stylesheet" href="/css/main.css">
-
       <!-- Responsive CSS -->
       <link rel="stylesheet" href="/css/responsive.css" media="(max-width: 1309px)">
-
       <!-- Google Fonts -->
       <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700|Raleway:300,400,700' rel='stylesheet' type='text/css'>
   </head>
