--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
       <title>24:42 Project - {{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
       <!-- syntax highlighting CSS -->
-      <link async rel="stylesheet" href="/css/syntax.css">
+      <link rel="stylesheet" href="/css/syntax.css">
       <!-- Custom CSS -->
       <link rel="stylesheet" href="/css/main.css">
       <!-- Responsive CSS -->
