--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="site">
       <div class="sidebar" id="sidebar">
         <div class="header">
-          <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
+          <h1 class="title"><a href="/"><img id="logo" src="/images/logo.webp"></a></h1>
           <span class="tagline">Cyber Security Project</span>
         </div>
         <div class="posts">
